# FinancialAgent

./: .env.example  .gitignore  01_download_annual.py  02_clean_sec_data.py  04_create_chunks.py  07_generation_system.py  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
scripts/: 01_download_annual.py  01_download_filings.py  02_clean_yahoo_finance_data.py  03_analyze_documents.py  05_create_embeddings.py  06_setup_vector_db.py
src/financial_agent/: __init__.py  agent.py  chunk_utils.py  vector_db.py
